Ingress/service-definition.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  # we are creating a ClusterIP (second type of service) here
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80 # port on service
      targetPort: 80 # port at whcih nginx listens
  selector: # whcih pods this service should select
    app: myapp
